--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-markdownify
-python-docx
-markdown2
-requests
-deep-translator
-beautifulsoup4
-lxml
+beautifulsoup4==4.13.4
+docx==0.2.4
+Markdown==3.8.2
+pandas==2.3.1
+pypandoc==1.15
+Requests==2.32.4
+selenium==4.34.2
+openpyxl==3.1.5
